@@ -1,5 +1,5 @@
 MyHD driver and utility package  --  http://myhd.sourceforge.net/
-Copyright 2003-2005, Mike Bourgeous (some 2003, Mark Lehrer; see driver/README)
+Copyright 2003-2006, Mike Bourgeous (some 2003, Mark Lehrer; see driver/README)
 
 doc/
 	These files describe the known features of the chip
@@ -17,11 +17,12 @@ README files in this driver distribution (find . -name README).  Reading source
 code is also good.
 
 Remember that this driver has no video capture capability.  The kernel module
-creates three devices per TL880 card in /dev/tl880 to allow all users to mmap
-the memory regions of the TL880, or use the ioctl interface to control the card.
+uses three devices per TL880 card in /dev/tl880 to allow all users to mmap the
+memory regions of the TL880, or use the ioctl interface to control the card.
 The tools are then used to upload the firmware, set external sync, turn on color
-bars, and display a mouse cursor.  That's all that the driver can do so far.
-There is also I2C bus support.  For the latest known bugs, see the web site.
+bars, display a mouse cursor, and tweak the OSD.  That's all that the driver can
+do so far.  There is also I2C bus support.  For the latest known bugs, see the
+web site and mailing list.
 
 To test the I2C bus(es), you will need the lm_sensors package.  Load the
 i2c-dev, i2c-algo-bit, and tl880.ko kernel modules, then run i2cdetect for each
