@@ -1,0 +1,8 @@
+#!/bin/bash
+
+./dpc/dpcsync 1 1 0
+
+./osdtest
+./cursor
+
+
